<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/button_main"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_main"/>
    <item
            android:id="@+id/button_history"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_calls_history"/>

    <item
            android:id="@+id/button_settings"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_settings"/>
    <item
            android:id="@+id/button_call"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_call"
            android:visible="false"/>
    <item
            android:id="@+id/button_loading"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title=""
            android:visible="false"/>

</menu>