<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/button_main">

    <fragment
            android:id="@+id/button_main"
            android:name="ru.samsung.smartintercom.view.MainFragment"
            android:label="@string/title_main"
            tools:layout="@layout/fragment_main"/>

    <fragment
            android:id="@+id/button_settings"
            android:name="ru.samsung.smartintercom.view.SettingsFragment"
            android:label="@string/title_settings"
            tools:layout="@layout/fragment_settings"/>

    <fragment
            android:id="@+id/button_call"
            android:name="ru.samsung.smartintercom.view.CallFragment"
            android:label="@string/title_call"
            tools:layout="@layout/fragment_call"/>

    <fragment
            android:id="@+id/button_history"
            android:name="ru.samsung.smartintercom.view.CallsHistoryFragment"
            android:label="@string/title_calls_history"
            tools:layout="@layout/fragment_info"/>

    <fragment
            android:id="@+id/button_loading"
            android:name="ru.samsung.smartintercom.view.LoadingFragment"
            android:label=""
            tools:layout="@layout/fragment_info"/>

</navigation>