<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    android:text="@string/main_greetings"
                    android:textSize="20sp"
                    android:typeface="sans" android:textAlignment="center"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/main_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    android:paddingLeft="10dp" android:paddingRight="10dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:text="@string/main_go_to_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@id/button_start"
                        android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>