<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_intercom_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/intercom_model"
                    android:enabled="false"
                    app:boxStrokeColor="@color/black"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_intercom_model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="48dp" android:text="@string/empty_intercom_model"/>

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        android:text="@string/button_retry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button_retry"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="32dp" android:layout_marginBottom="32dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.fragment.app.FragmentContainerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_fragment_container_view"
            />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>