<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.CallFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/missed_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/missed_call_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/call_image"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/call_action_container"
                app:srcCompat="@android:drawable/ic_menu_call" android:scaleX="2" android:scaleY="2"/>
        <LinearLayout
                android:id="@+id/call_action_container"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp" android:layout_marginEnd="20dp">
            <Button
                    android:text="@string/accept_call_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/accept_call_button"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_dark"
                    android:layout_marginEnd="10dp"/>
            <Button
                    android:text="@string/decline_call_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/decline_call_button"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_dark"
                    android:layout_marginStart="10dp" android:textColor="#B2EBF2"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>